resource-manifests/service-two.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-two-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: service-two
  template:
    metadata:
      labels:
        app: service-two
    spec:
      containers:
      - image: sa-service-2
        imagePullPolicy: Never
        name: sa-service-2
---
apiVersion: v1
kind: Service
metadata:
  name: service-two-service
spec:
  ports:
  - name: http
    targetPort: 5000
    port: 80
  selector:
    app: service-two
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: service-two-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: service-two.minikube
    http:
      paths:
      - path: /
        backend:
          serviceName: service-two-service
          servicePort: http
